WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75298
QuerySelector should not have side effect.
https://bugs.webkit.org/show_bug.cgi?id=75298
Summary
QuerySelector should not have side effect.
Shinya Kawanaka
Reported
2011-12-28 01:19:54 PST
Currently QuerySelector seems to have side effect that parentStyle's flags are set if some pseudo type (e.g. first-of-type) was used to query.
Attachments
Patch
(1.70 KB, patch)
2011-12-28 01:24 PST
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Shinya Kawanaka
Comment 1
2011-12-28 01:24:35 PST
Created
attachment 120643
[details]
Patch
Andreas Kling
Comment 2
2011-12-28 09:15:52 PST
Comment on
attachment 120643
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=120643&action=review
> Source/WebCore/ChangeLog:11 > + No new tests. Covered by existing tests.
If this is covered by existing tests, why aren't you unskipping something that used to fail?
Antti Koivisto
Comment 3
2011-12-30 06:23:00 PST
(In reply to
comment #2
)
> If this is covered by existing tests, why aren't you unskipping something that used to fail?
The flags that these end up setting affect style recalc performance optimizations and are not easily testable. Selector queries itself should should have reasonable coverage.
WebKit Review Bot
Comment 4
2012-01-11 23:07:30 PST
Comment on
attachment 120643
[details]
Patch Clearing flags on attachment: 120643 Committed
r104793
: <
http://trac.webkit.org/changeset/104793
>
WebKit Review Bot
Comment 5
2012-01-11 23:07:35 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug