QuerySelector should not have side effect. https://bugs.webkit.org/show_bug.cgi?id=75298

Patch by Shinya Kawanaka <shinyak@google.com> on 2012-01-11
Reviewed by Antti Koivisto.

Since SelectorChecker is not collecting-rules-only mode, it may set some flags in render styles
if some pseudo types (e.g. first-of-type) are used.

No new tests. Covered by existing tests.

* dom/SelectorQuery.cpp:
(WebCore::SelectorQuery::SelectorQuery):
  Made collecting rules only.

Canonical link: https://commits.webkit.org/92956@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104793 268f45cc-cd09-0410-ab3c-d52691b4dbfc